[package]
name = "social-image"
version = "0.4.0"
edition = "2021"
description = "Generate social images using SVG templates"
repository = "https://github.com/clord/social-image"
license = "MIT OR Apache-2.0"

[dependencies]
bs58 = "0.4.0"
rand = "0.8.4"
resvg = { version = "0.21.0", features = ["text"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_prometheus = "0.10.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.1"
tiny-skia = "0.6.3"
tokio = "1.16.1"
tracing = "0.1.30"
tracing-futures = "0.2.5"
usvg = "0.20.0"
figment = { version = "0.10", features = ["env", "toml", "json"] }
color-eyre = "0.6.0"
eyre = "0.6.6"
