[package]
name = "social-image"
version = "0.5.3"
edition = "2021"
description = "Generate social images using SVG templates"
repository = "https://github.com/clord/social-image"
license = "MIT OR Apache-2.0"

[dependencies]
bs58 = "0.4.0"
rand = "0.8.5"
resvg = { version = "0.22.0", features = ["text"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_prometheus = "0.10.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.2"
tiny-skia = "0.6.3"
tokio = "1.18.0"
tracing = "0.1.32"
tracing-futures = "0.2.5"
usvg = "0.22.0"
figment = { version = "0.10", features = ["env", "toml", "json"] }
color-eyre = "0.6.1"
eyre = "0.6.7"
tracing-subscriber = { version = "0.3.9", features = ["json" ,"env-filter"] }
yansi = "0.5.0"
tracing-log = "0.1.2"
uuid = { version = "0.8.2", features = ["v4"] }
